Textfield textalign fix

--- a/react-ui/src/components/ui/Forms/TextField.css
+++ b/react-ui/src/components/ui/Forms/TextField.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  text-align: left;
   padding: 10px;
 }
 
